<resources>
    <string name="app_name">BeStudious</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_holder">place holder</string>
    <string name="CheckBox">checkBox</string>
    <string name="button">Button</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="select_time">Select Time</string>
    <string name="home">Home</string>
    <string name="timer">Timer</string>
    <string name="new_task">New Task</string>
    <string name="name">Name</string>
    <string name="desc">desc</string>
    <string name="current_date">Current Date</string>
    <string name="leaf">leaf</string>
    <string name="logo">logo</string>
    <string name="new_post">New Post</string>
    <string name="feed">Feed</string>
    <string name="enter_time_in_minutes">Enter time (in minutes)</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="zero">0</string>
    <string name="enter_time_in_seconds">Enter time in seconds</string>
    <string name="time_remaining_0_seconds">Time remaining: 0 seconds</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="edit_task">Edit Task</string>
    <string name="select_date">Select Date</string>
    <string name = "select">Select University</string>
    <string name="back_arrow"><![CDATA[<-]]></string>
    <string name="forward_arrow"><![CDATA[->]]></string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tues">TUES</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="one">1</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="weekly">Weekly</string>
    <string name="new_event">New Event</string>
    <string name="event">Event</string>
    <string name="monthly">Monthly</string>
</resources>