...
        android:layout_height="match_parent"
        android:id="@+id/todoListRecyclerView"
        android:backgroundTint="@color/design_default_color_background"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/newTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
...
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:backgroundTint="@color/light_green">

        <Button
            android:id="@+id/tasksButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/checked_24"
            android:backgroundTint="@color/dark_teal"
            android:textColor="@color/design_default_color_on_primary"
...
