...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="@string/select_date"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SaveButtonTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?colorOnPrimary"
...
